flux/installs/grafana/networking.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  labels:
    iso.michaelalinks.com/gateway: public
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  namespace: grafana
spec:
  hostnames:
    - grafana.iso.michaelalinks.com
  parentRefs:
    - name: public
      namespace: envoy-gateway-system
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  hostnames:
    - grafana.iso.michaelalinks.com
  parentRefs:
    - name: grafana
      kind: ListenerSet
      group: gateway.networking.k8s.io
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 3000
